--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "node src/app.js --watch"
+    "start": "node app.js",
+    "dev": "node app.js --watch"
   },
   "dependencies": {
     "dotenv": "^17.2.2",
